quick fix for notable person covering up text on dessy

--- a/wp/wp-content/themes/roots/custom-css/dessy-interview.css
+++ b/wp/wp-content/themes/roots/custom-css/dessy-interview.css
@@ -159,3 +159,9 @@ Desssy Interview Specific Styles
         width: 100%;
     }
 }
+
+@media (max-width:480px) {
+    .notable-person#lindsey-goodchild{
+        margin-top: 0;
+    }
+}
